Fix overflowing image

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -622,6 +622,7 @@ section {
  7.3 Intro
 --------------------------------------------------*/
 #intro {
+  overflow: hidden;
   padding-top: 100px;
   padding-bottom: 130px;
   text-align: center; }
